Fix text align in order and account

--- a/src/styles/pages/Account.scss
+++ b/src/styles/pages/Account.scss
@@ -3,3 +3,10 @@
     font-size: 16px;
     font-weight: 400;
 }
+
+#account-box .cell_acc{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
